--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,1 +1,15 @@
+.dash--container {
+  position: relative;
+  min-height: 100vh;
+  width: 100%;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+}
 
+.dash--wrapper > h2 {
+  margin-top: 6rem;
+  font-family: var(--secondary--font);
+  color: var(--header--color);
+  font-size: 3rem;
+}
