--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -4,12 +4,20 @@
   width: 100%;
   padding: 2rem;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dash--wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .dash--wrapper > h2 {
+  width: max-content;
   margin-top: 6rem;
   font-family: var(--secondary--font);
-  color: var(--header--color);
+  color: var(--blue--color);
   font-size: 3rem;
 }
