--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=REM:wght@300;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=REM:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300&family=Open+Sans:wght@300;400&family=REM:wght@300;700&display=swap');
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -13,13 +13,11 @@ html {
 }
 
 body {
-  background-color: var(--secondary--color);
+  background-color: var(--primary--color);
+  font-family: var(--primary--font);
 }
 :root {
-  --orange--color: #f05e16;
-  --secondary--color: #ffffff;
-  --primary--font: 'Open Sans', sans-serif;
-  --secondary--font: 'REM', sans-serif;
+  --primary--font: 'DM Sans', sans-serif;
 }
 
 /* @media screen and (max-width: 1000px) {
