--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300&family=Open+Sans:wght@300;400&family=REM:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --primary--font: 'DM Sans', sans-serif;
+  --primary--font: 'Inter', sans-serif;
 }
 
 * {
